# projeto_imc

./: LICENSE  README.md  calculadora_imc.py  setup.cfg
calculadora_imc/: __init__.py  imc.py
calculadora_imc/calculadora_imc.egg-info/: PKG-INFO  SOURCES.txt
calculadora_imc/calculadora_imc_renanamicuchi.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_imc.py
