[metadata]
name = calculadora-imc
version = 0.1.0
author = Seu Nome
author_email = seu.email@example.com
description = Calculadora de IMC simples em Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seu_usuario/calculadora_imc
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = calculadora_imc
packages = find:
python_requires = >=3.6
install_requires =
    # Adicione dependências aqui, se houver (ex.: numpy)

[options.packages.find]
where = calculadora_imc