[metadata]
name = calculadora-imc-renanamicuchi
version = 0.1.0
author = Renan Amicuchi
author_email = renan.amicuchi@gmail.com
description = Calculadora de IMC simples em Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/renanamicuchi/projeto_imc.git
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = calculadora_imc
packages = find:
python_requires = >=3.6

[options.packages.find]
where = calculadora_imc